# Skystore

./: .env.example  README.md  categories_fixture.json  products_fixture.json  pyproject.toml  user_groups.json
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html  base.html  congratulations.html
blog/templates/blog/includes/: inc_menu.html
catalog/: admin.py  context_processors.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options.py  0003_contacts.py  0004_alter_product_options_product_is_published_and_more.py  0005_alter_product_is_published.py
catalog/templates/catalog/: add_product_form.html  base.html  category_detail.html  contacts.html  home.html  message.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_footer.html  inc_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
static/css/: style.css
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_remember_me.py  0002_user_token_user_username.py
users/templates/registration/: login.html  welcome_letter.html
users/templates/users/: base_account.html  user_detail.html  user_form.html  user_product_list.html
